# otus_c

./: .clang-format  .gitmodules
hw03-zipjpeg/: .gitignore  Makefile  main.c
hw04-encoder/: .gitignore  Makefile  Readme.md
hw04-encoder/src/: config.c  config.h  encoding_tables.h  main.c
hw08-search-sort/: .gitignore  Makefile  README.md  test.txt
hw08-search-sort/src/: config.c  config.h  hashtable.c  hashtable.h  main.c  word_frequency.c  word_frequency.h
hw10-weather/: .gitignore  CMakeLists.txt  README.md
hw10-weather/src/: config.c  config.h  fetch.c  fetch.h  forecast.c  forecast.h  main.c  metaweather.c  metaweather.h  metaweather_forecasts.c  metaweather_locations.c
hw10-weather/src/metaweather/: forecasts.c  http.c  http.h  locations.c  metaweather.h
hw12-logger/: CMakeLists.txt  README.md  example.c  logger.c  logger.h
hw14-posix/: 0001-hw14-fix.patch  README.md
hw14-posix/clib/src/common/: clib-package.c
hw18-crc32/: CMakeLists.txt  crc32.c  crc32_fgetc.c
